# plugin2mcp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
plugin2mcp/: __init__.py  __main__.py  cowork.py  executor.py  hook.py  installer.py  interceptor.py  prompt_builder.py  registry.py  schema.py
tests/: test_hook.py  test_installer.py  test_interceptor.py
